ajout lien github sur le logo et ajout animation au survole et changement de couleur du titre lexique, amélioration changement de couleur au click du titre diplomes

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <script src="menuBurger.js" async></script>
     <script src="affichDiplomes.js" async></script>
     <script src="cv.js" async></script>
+    <script src="affichLexique.js" async></script>
     <script src="controleFormContact.js" async></script>
     <title>portfolio</title>
 </head>
@@ -126,22 +127,24 @@
 
             </article>
             <article class="Lexique">
-                <h5>Lexique</h5>
-                <p>
-                    *CMS: C'est un logiciel qui permet de créer de A à Z un site web grâce à des thèmes proposé par
-                    celui-ci.
-                </p>
-                <p>
-                    *Divi: C'est un éditeur de site web qui permet de créer et modifier un site web sans utiliser de
-                    codage informatique, ni de connaissances en programmation web.
-                </p>
-                <p>
-                    *Framework: C'est un outil de développement qui permet de faciliter la création d'un site web.
-                    Il
-                    permet d'uniformiser le codage des développeurs, il faut avoir des connaissances en codage pour
-                    son
-                    utilisation.
-                </p>
+                <h5 id="titre-lexique">Lexique</h5>
+                <div id="contenus-lexique">
+                    <p>
+                        *CMS: C'est un logiciel qui permet de créer de A à Z un site web grâce à des thèmes proposé par
+                        celui-ci.
+                    </p>
+                    <p>
+                        *Divi: C'est un éditeur de site web qui permet de créer et modifier un site web sans utiliser de
+                        codage informatique, ni de connaissances en programmation web.
+                    </p>
+                    <p>
+                        *Framework: C'est un outil de développement qui permet de faciliter la création d'un site web.
+                        Il
+                        permet d'uniformiser le codage des développeurs, il faut avoir des connaissances en codage pour
+                        son
+                        utilisation.
+                    </p>
+                </div>
             </article>
         </div>
         <div>
@@ -168,7 +171,7 @@
             </div>
             <section class="github">
                 <p>Vous pouvez aussi les trouver sur mon compte github</p>
-                <img src="img/github.png" alt="github">
+                <a href="https://github.com/Gaillard05" class="lien-github"><img src="img/github.png" alt="github"></a>
             </section>
         </div>
         <div class="conteneurForm">
