--- a/portfolio.html
+++ b/portfolio.html
@@ -180,7 +180,7 @@
                 <p>Un projet, une question n'hésitez pas à me contacter.
                     Je vous répondrai dans les meilleurs délais</p>
             </section>
-            <form action="#" method="post" id="form">
+            <form action="" method="post" id="form">
                 <input type="text" name="nom" placeholder="nom" id="nom">
                 <input type="text" name="num" placeholder="numéro de téléphone">
                 <input type="text" name="mail" placeholder="adresse mail">
