début contrôle de saisie du formulaire de contact

--- a/portfolio.html
+++ b/portfolio.html
@@ -180,13 +180,23 @@
                 <p>Un projet, une question n'hésitez pas à me contacter.
                     Je vous répondrai dans les meilleurs délais</p>
             </section>
-            <form action="" method="post" id="form">
-                <input type="text" name="nom" placeholder="nom" id="nom">
-                <input type="text" name="num" placeholder="numéro de téléphone">
-                <input type="text" name="mail" placeholder="adresse mail">
-                <textarea name="message" id="message" cols="30" rows="10"
-                    placeholder="motif de votre demande"></textarea>
-                <input type="submit" value="Envoyer" class="btnContact" id="btnEnvoyer">
+            <form action="#" method="post" id="form">
+                <div class="champs">
+                    <input type="text" name="nom" placeholder="nom" id="nom">
+                </div>
+                <div class="champs">
+                    <input type="tel" name="num" placeholder="numéro de téléphone">
+                </div>
+                <div class="champs">
+                    <input type="email" name="mail" placeholder="adresse mail">
+                </div>
+                <div class="champs">
+                    <textarea name="message" id="message" cols="30" rows="10"
+                        placeholder="motif de votre demande"></textarea>
+                </div>
+                <div class="btnContact">
+                    <input type="submit" value="Envoyer" id="btnEnvoyer">
+                </div>
             </form>
         </div>
         <div class="scroll-top">
