controle saisies formulaire version 1

--- a/portfolio.html
+++ b/portfolio.html
@@ -180,9 +180,9 @@
                 <p>Un projet, une question n'hésitez pas à me contacter.
                     Je vous répondrai dans les meilleurs délais</p>
             </section>
-            <form action="#" method="post" id="form">
+            <form action="contact.php" method="post" id="form">
                 <div class="champs">
-                    <input type="text" name="nom" placeholder="nom" id="nom">
+                    <input type="text" name="nom" placeholder="nom" id="nom" minlength="2" maxlength="25">
                 </div>
                 <div class="champs">
                     <input type="tel" name="num" placeholder="numéro de téléphone">
